--- a/monster/templates/search.html
+++ b/monster/templates/search.html
@@ -1,2 +1,3 @@
-<form>
+<form action="{% url 'manga:search' %}" method="get" class='w-64 h-16 bg-slate-100 flex justify-center align-middle content-center'>
+    <input name="q" type="text" placeholder="Search..." class="w-full h-8">
 </form>
