--- a/monster/templates/top_bar.html
+++ b/monster/templates/top_bar.html
@@ -1,5 +1,5 @@
 <div class="w-full h-16 flex border-b-2 border-gray-50 bg-gray-50 justify-between mb-4">
     <a class="ml-2 w-48 h-16 bg-slate-50" href={% url "index:index" %}>{% include 'logo.html' %}</a>
 
-    <div class="w-16 h-16 bg-slate-50"></div>
+    <div class="w-64 h-16 bg-slate-50">{% include 'search.html' %}</div>
 </div>
