Парсер упускал некоторые манги, добавил их в очередь парсинга, Сделал интерфейс строки поиска на сайте

--- a/monster/templates/index.html
+++ b/monster/templates/index.html
@@ -11,10 +11,11 @@
 
 
 
-<div class="container border-2 border-black mx-auto w-[75%] text-center">
-    FFFFFFFFFF
-</div>
-
+{% comment %} 
+<a class="ml-2 w-48 h-16 bg-[#252527]" href={% url "index:index" %}>
+    {% include 'logo.html' %}
+</a> 
+{% endcomment %}
 
 
 {% endblock %}
