--- a/monster/templates/logo.html
+++ b/monster/templates/logo.html
@@ -1,4 +1,4 @@
 <div class="w-48 h-16 flex items-center">
     <img src='https://img.icons8.com/?size=256&id=VzU7PPLtpY2i&format=png' class='w-8 h-8'>
-    <p class="text-center">Mangalib Monster</p>
+    <p class="text-center text-[#BFBFBF]">Mangalib Monster</p>
 </div>
