Сделал сворачивание окна поиска при клике за пределы его

--- a/monster/templates/manga_card.html
+++ b/monster/templates/manga_card.html
@@ -27,5 +27,5 @@
 
 {% endfor %}
 
-<div id='next' hidden data-next={% if meta.next %}1{% else %}0{% endif %} data-exists-{% if data %}1{% else %}0{% endif %}></div>
+<div id='next' hidden data-page={{meta.current}} data-next={% if meta.next %}1{% else %}0{% endif %}></div>
 {% comment %} <div> {% endcomment %}
