Поменял страницу манги

--- a/monster/templates/base.html
+++ b/monster/templates/base.html
@@ -10,7 +10,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     {% block extra_css %}{% endblock %}
 </head>
-<body class='w-full h-full bg-black font-mono'>
+{% comment %} font-mono {% endcomment %}
+<body class='w-full h-full bg-[#0a0a0a]'>
     {% block content %}{% endblock %}
     {% block extra_js %}{% endblock %}
 </body>
