--- a/monster/templates/manga.html
+++ b/monster/templates/manga.html
@@ -116,7 +116,9 @@
                         <div class='text-[#BFBFBF] text-base '>
                             {% for name in manga.other_names %}
                                 {{name}}
+                                {% if not forloop.last %}|{% endif %}
                             {% endfor %}
+
                         </div>
                     </div>
                 {% endif %}
@@ -151,7 +153,6 @@
             </div>
 
 
-
             <div class='bg-[#1c1c1c] w-full h-auto z-30 rounded-lg py-4 px-4'>
 
                 <div class='w-full hover:bg-[#252526] p-2 rounded-lg'>
@@ -168,6 +169,9 @@
 
                 bg-[#252526] фон элементов
                 bg-[#1c1c1c] фон элементов при наведении
+
+                text-[#BFBFBF] текст основной
+                text-[#EBEBF580] текст вторичный
 
                 {% endcomment %}
                 <div class='w-full hover:bg-[#252526] p-2 rounded-lg'>
@@ -194,11 +198,43 @@
                     </div>
                 </div>
 
-                
+                <div class='w-full hover:bg-[#252526] p-2 rounded-lg'>
+                    <div class='text-[#EBEBF580]'>
+                        Переводчики
+                    </div>
+                    <div class="[&>div]:border gap-2 [&>div]:border-[#464649] flex flex-wrap [&>div]:rounded-md [&>div]:w-auto [&>div]:h-auto [&>div]:text-[#BFBFBF] [&>div]:bg-[#252526]">
+                        {% for team in manga.teams.all %}
+                        <div class='flex items-center justify-center align-middle p-[1px] gap-1 cursor-pointer'>
+                            <img class='h-7 w-7 rounded-md' src='https://test-front.mangalib.me{{team.cover.thumbnail}}'>
+                            {{team.name}}
+                        </div>
+                        {% endfor %}
+                    </div>
+                </div>
+
+                <div class='border border-black rounded-lg mt-4 flex flex-wrap w-full h-full'>
+
+
+                </div>
+
             </div>
         
         </div>
+
     </div>
+
+    <div class='w-full h-full flex flex-row justify-between gap-4 px-4 bg-[#252526] rounded-lg m-4 p-4'>
+        
+        <div class='border border-black rounded-lg mt-4 flex flex-wrap w-full h-auto pm-4'>
+
+            <div class='[&>canvas]:bg-[#252526] [&>canvas]:rounded-lg w-full h-auto text-[#BFBFBF] rounded-lg flex justify-between gap-2'>
+                <canvas id="bookmarks" class='w-auto h-64'></canvas>
+                <canvas id="rating" class='w-auto h-64'></canvas>
+            </div>
+
+        </div>
+
+    </div>  
 
 </div>
 
@@ -215,5 +251,8 @@
 {% endblock %}
 
 {% block extra_js %}
+{% comment %} <script src="https://cdn.jsdelivr.net/npm/chart.js"></script> {% endcomment %}
+<script src='{% static "chart.js" %}'></script>
 <script src='{% static "search.js" %}'></script>
+<script src='{% static "test.js" %}'></script>
 {% endblock %}
