Добавил на страницу манги схожее и связанное

--- a/monster/templates/base.html
+++ b/monster/templates/base.html
@@ -12,7 +12,7 @@
     {% block extra_css %}{% endblock %}
 </head>
 {% comment %} font-mono {% endcomment %}
-<body class='w-full h-full bg-[#0a0a0a]'>
+<body class='w-full h-full bg-[#0a0a0a] font-mono'>
     {% block content %}{% endblock %}
     {% block extra_js %}{% endblock %}
 </body>
