--- a/monster/templates/manga.html
+++ b/monster/templates/manga.html
@@ -13,7 +13,7 @@
         box-shadow: rgba(0, 0, 0, 0.1) 0px -100px 100px 0px inset;
     }
 </style>
-<div hidden id='urls' data-stats='{% url "manga:add_stats" %}' data-csrf={{ csrf_token }} data-manga-id='{{manga.id}}' data-get-stats-urs={% url "manga:get_stats" %}></div>
+<div hidden id='urls' data-stats='{% url "manga:add_stats" %}' data-csrf={{ csrf_token }} data-manga-id='{{manga.id}}' data-get-stats-urs={% url "manga:get_stats" %} data-get-site-page={% url "manga_page:manga_data" slug=manga.slug %}></div>
 
 <div class="w-[1300px] mx-auto flex flex-col justify-center items-center bg-[#0a0a0a] h-full p-4 font-mono rounded-md min-h-96 mt-4 [&_*]:duration-300">
 
@@ -54,7 +54,23 @@
                         Глав
                     </div>  
                     <div class='text-[#BFBFBF] text-base '>
-                        {{manga.chapters_count}}
+                        ~{{manga|get_chapter_count}}
+                    </div>
+                </div>
+                <div>
+                    <div class="text-[#EBEBF580] items-start text-left">
+                        Страниц
+                    </div>  
+                    <div class='text-[#BFBFBF] text-base '>
+                        ~{{manga|get_page_count}}
+                    </div>
+                </div>
+                <div>
+                    <div class="text-[#EBEBF580] items-start text-left">
+                        Комментариев
+                    </div>  
+                    <div class='text-[#BFBFBF] text-base '>
+                        ~{{manga|get_comments_count}}
                     </div>
                 </div>
                 <div>
@@ -243,7 +259,6 @@
 
     <div class='w-full h-full flex flex-col justify-between [&>*]:bg-[#252526] rounded-lg gap-0 mt-4 px-4'>
         <div class='bg-[#0a0a0a] flex flex-col justify-between rounded-lg gap-4 px-0 py-4'>
-            {% for i in '0123'|make_list %}
 
             <div class='w-full rounded-lg h-auto'>
                 <div class='w-full h-80 [&_canvas]:border [&_canvas]:border-[#0a0a0a] [&_canvas]:bg-[#252526] [&_canvas]:rounded-lg text-[#BFBFBF] rounded-lg flex justify-between gap-2 px-4'>
@@ -257,8 +272,34 @@
                     </div>
                 </div>
             </div>
+            <div class='w-full rounded-lg h-auto'>
+                <div class='w-full h-80 [&_canvas]:border [&_canvas]:border-[#0a0a0a] [&_canvas]:bg-[#252526] [&_canvas]:rounded-lg text-[#BFBFBF] rounded-lg flex justify-between gap-2 px-4'>
+                    <div class='text-center h-80 w-full items-start flex flex-col'>
+                        <span id='population_page_compressed_text' class='w-full h-auto'></span>
+                        <canvas id="population_page_compressed" class='w-full !h-full'></canvas>
+                    </div>
+                    <div class='text-center h-80 w-full items-start flex flex-col'>
+                        <span id='population_chapter_compressed_text' class='w-full h-auto'></span>
+                        <canvas id="population_chapter_compressed" class='w-full !h-full'></canvas>
+                    </div>
+                </div>
+            </div>
 
+            {% for i in '01234'|make_list %}
+            <div class='w-full rounded-lg h-auto'>
+                <div class='w-full h-80 [&_canvas]:border [&_canvas]:border-[#0a0a0a] [&_canvas]:bg-[#252526] [&_canvas]:rounded-lg text-[#BFBFBF] rounded-lg flex justify-between gap-2 px-4'>
+                    <div class='text-center h-80 w-full items-start flex flex-col'>
+                        <span id='' class='w-full h-auto'></span>
+                        <canvas id="" class='w-full !h-full'></canvas>
+                    </div>
+                    <div class='text-center h-80 w-full items-start flex flex-col'>
+                        <span id='' class='w-full h-auto'></span>
+                        <canvas id="" class='w-full !h-full'></canvas>
+                    </div>
+                </div>
+            </div>
             {% endfor %}
+
         </div>
     </div>  
 
