--- a/monster/templates/manga.html
+++ b/monster/templates/manga.html
@@ -13,7 +13,9 @@
         box-shadow: rgba(0, 0, 0, 0.1) 0px -100px 100px 0px inset;
     }
 </style>
-<div hidden id='urls' data-stats='{% url "manga:add_stats" %}' data-csrf={{ csrf_token }} data-manga-id='{{manga.id}}' data-get-stats-urs={% url "manga:get_stats" %} data-get-site-page={% url "manga_page:manga_data" slug=manga.slug %}></div>
+<div data-page-compressed-toxic={% url "manga_page:manga_data_toxic_compressed" slug=manga.slug %} hidden id='urls' data-stats='{% url "manga:add_stats" %}' data-csrf={{ csrf_token }} data-manga-id='{{manga.id}}' data-get-stats-urs={% url "manga:get_stats" %} data-page-compressed={% url "manga_page:manga_data_population_compressed" slug=manga.slug %}>
+</div>
+<input hidden id=''>test</input>
 
 <div class="w-[1300px] mx-auto flex flex-col justify-center items-center bg-[#0a0a0a] h-full p-4 font-mono rounded-md min-h-96 mt-4 [&_*]:duration-300">
 
@@ -71,6 +73,14 @@
                     </div>  
                     <div class='text-[#BFBFBF] text-base '>
                         ~{{manga|get_comments_count}}
+                    </div>
+                </div>
+                <div>
+                    <div class="text-[#EBEBF580] items-start text-left">
+                        Средняя токсичность комментариев
+                    </div>  
+                    <div class='text-[#BFBFBF] text-base '>
+                        {{manga|get_avg_toxic}}
                     </div>
                 </div>
                 <div>
@@ -285,19 +295,47 @@
                 </div>
             </div>
 
-            {% for i in '01234'|make_list %}
             <div class='w-full rounded-lg h-auto'>
                 <div class='w-full h-80 [&_canvas]:border [&_canvas]:border-[#0a0a0a] [&_canvas]:bg-[#252526] [&_canvas]:rounded-lg text-[#BFBFBF] rounded-lg flex justify-between gap-2 px-4'>
                     <div class='text-center h-80 w-full items-start flex flex-col'>
-                        <span id='' class='w-full h-auto'></span>
-                        <canvas id="" class='w-full !h-full'></canvas>
+                        <span id='toxic_chapters_compressed_text' class='w-full h-auto'></span>
+                        <canvas id="toxic_chapters_compressed" class='w-full !h-full'></canvas>
                     </div>
                     <div class='text-center h-80 w-full items-start flex flex-col'>
-                        <span id='' class='w-full h-auto'></span>
-                        <canvas id="" class='w-full !h-full'></canvas>
+                        <span id='PASS' class='w-full h-auto'></span>
+                        <canvas id="PASS" class='w-full !h-full'></canvas>
                     </div>
                 </div>
             </div>
+
+            <div class='w-full rounded-lg h-auto'>
+                <div class='w-full h-80 [&_canvas]:border [&_canvas]:border-[#0a0a0a] [&_canvas]:bg-[#252526] [&_canvas]:rounded-lg text-[#BFBFBF] rounded-lg flex justify-between gap-2 px-4'>
+                    <div class='text-center h-80 w-full items-start flex flex-col'>
+                        <span id='PASS' class='w-full h-auto'></span>
+                        <canvas id="PASS" class='w-full !h-full'></canvas>
+                    </div>
+                    <div class='text-center h-80 w-full items-start flex flex-col'>
+                        <span id='PASS' class='w-full h-auto'></span>
+                        <canvas id="PASS" class='w-full !h-full'></canvas>
+                    </div>
+                </div>
+            </div>
+
+            <div class='w-full rounded-lg h-auto'>
+                <div class='w-full h-80 [&_canvas]:border [&_canvas]:border-[#0a0a0a] [&_canvas]:bg-[#252526] [&_canvas]:rounded-lg text-[#BFBFBF] rounded-lg flex justify-between gap-2 px-4'>
+                    <div class='text-center h-80 w-full items-start flex flex-col'>
+                        <span id='PASS' class='w-full h-auto'></span>
+                        <canvas id="PASS" class='w-full !h-full'></canvas>
+                    </div>
+                    <div class='text-center h-80 w-full items-start flex flex-col'>
+                        <span id='PASS' class='w-full h-auto'></span>
+                        <canvas id="PASS" class='w-full !h-full'></canvas>
+                    </div>
+                </div>
+            </div>
+
+            {% for i in '01234'|make_list %}
+
             {% endfor %}
 
         </div>
