Сделал График выхода (Chapter, Comments) по дням недели

--- a/monster/templates/manga.html
+++ b/monster/templates/manga.html
@@ -15,7 +15,8 @@
 </style>
 <div data-page-compressed-toxic={% url "manga_page:manga_data_toxic_compressed" slug=manga.slug %} hidden id='urls' data-stats='{% url "manga:add_stats" %}' data-csrf={{ csrf_token }} data-manga-id='{{manga.id}}' data-get-stats-urs={% url "manga:get_stats" %} data-page-compressed={% url "manga_page:manga_data_population_compressed" slug=manga.slug %}>
 </div>
-<input hidden id=''>test</input>
+<div hidden id='at_days'>{% url "manga_page:manga_data_at_days" slug=manga.slug %}</div>
+<div hidden id='pass'>{% url "manga_page:manga_data_at_days" slug=manga.slug %}</div>
 
 <div class="w-[1300px] mx-auto flex flex-col justify-center items-center bg-[#0a0a0a] h-full p-4 font-mono rounded-md min-h-96 mt-4 [&_*]:duration-300">
 
@@ -311,12 +312,12 @@
             <div class='w-full rounded-lg h-auto'>
                 <div class='w-full h-80 [&_canvas]:border [&_canvas]:border-[#0a0a0a] [&_canvas]:bg-[#252526] [&_canvas]:rounded-lg text-[#BFBFBF] rounded-lg flex justify-between gap-2 px-4'>
                     <div class='text-center h-80 w-full items-start flex flex-col'>
-                        <span id='PASS' class='w-full h-auto'></span>
-                        <canvas id="PASS" class='w-full !h-full'></canvas>
+                        <span id='comments_at_days_of_the_week_text' class='w-full h-auto'></span>
+                        <canvas id="comments_at_days_of_the_week" class='w-full !h-full'></canvas>
                     </div>
                     <div class='text-center h-80 w-full items-start flex flex-col'>
-                        <span id='PASS' class='w-full h-auto'></span>
-                        <canvas id="PASS" class='w-full !h-full'></canvas>
+                        <span id='chapters_at_days_of_the_week_text' class='w-full h-auto'></span>
+                        <canvas id="chapters_at_days_of_the_week" class='w-full !h-full'></canvas>
                     </div>
                 </div>
             </div>
