Тобавил график токсичности страниц самой токсичной главы

--- a/monster/templates/manga.html
+++ b/monster/templates/manga.html
@@ -305,8 +305,8 @@
                         <canvas id="toxic_chapters_compressed" class='w-full !h-full'></canvas>
                     </div>
                     <div class='text-center h-80 w-full items-start flex flex-col'>
-                        <span id='PASS' class='w-full h-auto'></span>
-                        <canvas id="PASS" class='w-full !h-full'></canvas>
+                        <span id='page_of_chapter_toxic_compressed_text' class='w-full h-auto'></span>
+                        <canvas id="page_of_chapter_toxic_compressed" class='w-full !h-full'></canvas>
                     </div>
                 </div>
             </div>
