--- a/monster/templates/manga.html
+++ b/monster/templates/manga.html
@@ -18,6 +18,7 @@
 <div hidden id='at_days'>{% url "manga_page:manga_data_at_days" slug=manga.slug %}</div>
 <div hidden id='at_days_percent'>{% url "manga_page:manga_data_at_days_percent" slug=manga.slug %}</div>
 <div hidden id='at_24_h'>{% url "manga_page:manga_data_24" slug=manga.slug %}</div>
+<div hidden id='manga'>{% url "manga:manga" slug="pass" %}</div>
 <div hidden id='pass'>{% url "manga_page:manga_data_at_days_percent" slug=manga.slug %}</div>
 
 <div class="w-[1300px] mx-auto flex flex-col justify-center items-center bg-[#0a0a0a] h-full p-4 font-mono rounded-md min-h-96 mt-4 [&_*]:duration-300">
