Доделал модель MangaPage, сделал поле is_ready и ссделал отображение на главной

--- a/monster/templates/base.html
+++ b/monster/templates/base.html
@@ -12,7 +12,7 @@
     {% block extra_css %}{% endblock %}
 </head>
 {% comment %} font-mono {% endcomment %}
-<body class='w-full h-full bg-[#0a0a0a] font-mono'>
+<body class='w-full h-full bg-[#0a0a0a]'>
     {% block content %}{% endblock %}
     {% block extra_js %}{% endblock %}
 </body>
