--- a/monster/templates/manga.html
+++ b/monster/templates/manga.html
@@ -24,7 +24,7 @@
 
 
 
-<div class="w-[1300px] mx-auto flex flex-col justify-center items-center bg-[#0a0a0a] h-full p-4 font-mono rounded-md min-h-96 mt-4 [&_*]:duration-300">
+<div class="w-[1300px] mx-auto flex flex-col justify-center items-center bg-[#0a0a0a] h-full p-4 rounded-md min-h-96 mt-4 [&_*]:duration-300">
 
     <img src={{manga.background.url}} class='rounded-lg brightness-75 test w-[1300px] h-[380px] object-cover'>
 
